--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.6",
     "google-map-react": "^2.1.9",
     "js-cookie": "^2.2.1",
+    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -53,7 +54,6 @@
   },
   "devDependencies": {
     "gsap": "file:gsap-bonus.tgz",
-    "node-sass": "^4.14.1",
     "react-transition-group": "^4.4.1"
   }
 }
